cluster/apps/traefik/traefik/app/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow egress to VictoriaTraces for OTLP trace export on port 10428
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vtraces-otlp-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: vt-single
      toPorts:
        - ports:
            - port: "10428"
              protocol: TCP
